-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.12.0
-
master clients with 2.10.5 servers
-
3
-
9223372036854775807
Recent landings to master have caused sanity-hsm tests 1b, 12c,f, g, h, m, o, p, 14, 15, 24a,b,d,e,f, 30b,c, 31b,c, 34, 35, 36, 37, 57, 58, 59, 110b, 222b,d, 223b, 228, 260c, 407 to fail for interop testing; master clients with 2.10.5 servers.
Looking at the failed test session at https://testing.whamcloud.com/test_sets/0de77f1c-e73e-11e8-b67f-52540065bddc , in the client 2 (vm6) console log, we see the following in most of the failed tests
[19290.833447] LustreError: 13720:0:(vvp_io.c:1495:vvp_io_init()) lustre: refresh file layout [0x200007936:0x6:0x0] error -61.
The above failure is for Lustre master 2.11.56.112 build #3824 clients and 2.10.5 servers. The last master build that we have interop test results for is for build #3821 and the testing passed. Nothing has landed to 2.10.5 for a couple of months. Thus, a patch causing this interop failure landed to master between builds #3821 and #3824.
This is what landed between build 3821 and 3824:
LU-11508 mdt: reject DoM file migration
LU-11468 lnet: set recovery interval from lnetctl
LU-6142 lov: Fix style issues for lov_ea.c
LU-6142 quota: Fix style issues for qsd_lock.c
LU-11380 mdc: move empty xattr handling to mdc layer
LU-11445 obd: remove portals handle from OBD import
LU-11599 ldlm: printing negative time on logs for recovery
LU-9538 utils: update description of ldiskfs xattrs
LU-11570 lnet: update changelog
LU-11561 ofd: return attr syncjournal to sync_journal
LU-11611 mdt: incorrect return value in mdt_reint_unlink
LU-11525 kernel: new kernel [RHEL7.6 3.10.0-957.el7]
Revert "LU-8130 ptlrpc: convert conn_hash to rhashtable"